<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">时间之书</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="menu_addnewitem">添加新训练项目</string>
	<string name="btn_addnewrecord">记录</string>
	<string name="item_counts">0/次</string>
	<string name="item_costtime">0/s</string>
	<string name="dialog_btnadditem">新增</string>
	<string name="dialog_btncancle">取消</string>
	<string name="dialog_etitemnamehint">项目名称</string>
	<string name="dialogo_etitemnameenglishhint">项目英文名</string>
	<string name="tv_queryrecord">查询记录</string>
	<string name="menu_backupdata">备份数据</string>
	<string name="alertdialog_ok">插入记录</string>
	<string name="alertdialog_cancle">取消</string>
</resources>
