<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etdialog_itemname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_etitemnamehint"
        android:ems="10" >

        <requestFocus />
    </EditText>
	
    <EditText
        android:id="@+id/etdialog_itemenglishname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialogo_etitemnameenglishhint"
        android:ems="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnadditem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/dialog_btnadditem"
            android:layout_marginLeft="3dp" />

        <Button
            android:id="@+id/btncancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/dialog_btncancle"
            android:layout_marginRight="3dp" />

    </LinearLayout>

</LinearLayout>