<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/lltop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvtimeinfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/hello_world"
            android:textColor="@color/color_demo_test"
            android:textSize="@dimen/tvtimeinfo_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llcontent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/lvcontentinfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </LinearLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/keyboardheight"
        android:layout_gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llbtnrecord"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnrecord"
            android:layout_width="@dimen/btn_addrecord_width"
            android:layout_height="@dimen/btn_addrecord_heigth"
            android:text="@string/btn_addnewrecord" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvbottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:textColor="@color/black"
            android:text="@string/tv_queryrecord" />
    </LinearLayout>

</LinearLayout>